Fix alignment in nav

--- a/css/blog/nav.css
+++ b/css/blog/nav.css
@@ -79,7 +79,6 @@ nav.toc-shown div.toc {
   background-color: #B8B8B8;
   overflow-y: auto;
   z-index: 9997;
-	text-align: center;
 }
 
 nav div.blog-nav-category {
